# 2025-zenn-hackathon2

./: .dockerignore  .gcloudignore  .gitignore  CRUSH.md  README.md  cloudbuild.yaml
format_data/: SubsidyDetail.json  SubsidyList.csv  add_amount.py  add_end.py  add_start.py  add_who.py  main.py  makeSubsidyDetail.py  makeSubsidyList.py  pyproject.toml
format_data/subsidy_json/: subsidy_001.json  subsidy_002.json  subsidy_003.json  subsidy_004.json  subsidy_005.json  subsidy_006.json  subsidy_007.json  subsidy_008.json  subsidy_009.json  subsidy_010.json  subsidy_011.json  subsidy_012.json  subsidy_013.json  subsidy_014.json  subsidy_015.json  subsidy_016.json  subsidy_017.json  subsidy_018.json  subsidy_019.json  subsidy_020.json  subsidy_021.json  subsidy_022.json  subsidy_023.json  subsidy_024.json  subsidy_025.json  subsidy_026.json  subsidy_027.json  subsidy_028.json  subsidy_029.json  subsidy_030.json  subsidy_031.json  subsidy_032.json  subsidy_033.json  subsidy_034.json  subsidy_035.json  subsidy_036.json  subsidy_037.json  subsidy_038.json  subsidy_039.json  subsidy_040.json  (+1440 more)
format_data/subsidy_json/subsidy_json/: subsidy_001.json  subsidy_002.json  subsidy_003.json  subsidy_004.json  subsidy_005.json  subsidy_006.json  subsidy_007.json  subsidy_008.json  subsidy_009.json  subsidy_010.json  subsidy_011.json  subsidy_012.json  subsidy_013.json  subsidy_014.json  subsidy_015.json  subsidy_016.json  subsidy_017.json  subsidy_018.json  subsidy_019.json  subsidy_020.json  (+1436 more)
format_data/vector/: add_embeddings.py  hojokin2024.csv  hojokin2024_with_embeddings.csv
(+92 files in other folders)
