[project]
name = "format-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]
